--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,9 +1,5 @@
 <div class="container">
 
-  <div>
-    <acme-navbar creation-date="main.creationDate"></acme-navbar>
-  </div>
-
   <div class="jumbotron text-center">
     <h1>'Allo, 'Allo!</h1>
     <p class="lead">
@@ -27,6 +23,23 @@
           <p>{{ awesomeThing.description }}</p>
           <p><a ng-href="{{awesomeThing.url}}">{{ awesomeThing.url }}</a></p>
         </div>
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading">Post a message</div>
+    <div class="panel-body">
+      <div class="input-group">
+        <textarea class="form-control" rows="3" ng-model="main.msg" style="resize: none;"></textarea>
+        <span class="input-group-addon btn btn-primary" ng-click="main.postMessage()">Post</span>
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading">Messages</div>
+    <div class="panel-body">
+      <ul class="list-group">
+        <li class="list-group-item" ng-repeat="message in main.messages">{{message.msg}}</li>
       </div>
     </div>
   </div>
