--- a/src/app/auth/auth.html
+++ b/src/app/auth/auth.html
@@ -3,14 +3,14 @@
     <div class="panel panel-default">
       <div class="panel-heading">Login</div>
       <div class="panel-body">
-        <form>
+        <form name="login" ng-submit="auth.login()">
           <div class="form-group">
             <label>Email</label>
-            <input type="email" name="email_address" class="form-control">
+            <input type="email" name="email_address" class="form-control" ng-model="auth.login.user.email">
           </div>
           <div class="form-group">
             <label>Password</label>
-            <input type="password" name="password" class="form-control">
+            <input type="password" name="password" class="form-control" ng-model="auth.login.user.pwd">
           </div>
           <button type="submit" class="btn btn-default">Submit</button>
         </form>
