--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -39,7 +39,7 @@
     <div class="panel-heading">Messages</div>
     <div class="panel-body">
       <ul class="list-group">
-        <li class="list-group-item" ng-repeat="message in main.messages">{{message.msg}}</li>
+        <li class="list-group-item" ng-repeat="message in main.messages">{{message.msg}} {{message.user.email}}</li>
       </div>
     </div>
   </div>
